--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 //Variables colores
 $white: #FEFEFE;
 $Malachite: #0AC763;
+$Malachite-2:#0AC763;
 $Silver: #BDBCBC;
 $Cocoa-Brown: #332927;
 $Black: #333333;
@@ -9,6 +10,9 @@ $Scarlet: #FF1F18;
 $Cobald: #0252BC;
 $Purple: #5E18BB;
 $Bg-purple: #F0E3FE;
+$Bg-card-item: #FEFEFE;
+$Bg-number: #2E7E78;
+$Bg-pay-page: #FAFAF8;
 
 //Responsive theme
 $mobile: 500px;
