--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import 'variables';
 @import 'mixins';
-
+@import 'modal';
+@import 'offcanvas';
 
 body{
     width: 100%;
@@ -21,13 +22,13 @@ header{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        img{
+        .icon-tiendita{
             height: 50%;
         }
         .ubication-cart{
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: space-evenly;
             width: 40%;
             cursor: pointer;
             .icon-ubication{
@@ -50,6 +51,7 @@ header{
                 justify-content: center;
                 align-items: center;
                 gap: 0.5rem;
+                border: none;
                 img{
                     height: 23px;
                 }
@@ -66,9 +68,6 @@ header{
                 .modal-title{
                     display: flex;
                     flex-direction: column;
-                    .button-close{
-                        @include button-close
-                    }
                     p{
                         @include title
                     }
@@ -90,9 +89,6 @@ header{
                 select{
                     @include select;
                 }
-                .button-add{
-                    @include button;
-                }
             }
         }
     }
@@ -104,7 +100,7 @@ main{
         width: 90%;
         margin: 4rem auto;
         position: relative;
-        img{
+        .image-banner{
             width: 100%;
         }
         p{
@@ -115,6 +111,23 @@ main{
             color: $white;
             font-size: 1.75rem;
             font-weight: 600;
+        }
+        .product-add{
+            width: 30%;
+            height: 56px;
+            background-color: $Malachite-2;
+            position: absolute;
+            right: 0;
+            top: -2rem;
+            z-index: 1;
+            border-radius: 0.25rem;
+            display: flex;
+            align-items: center;
+            padding: 0 1.5rem;
+            gap: 1rem;
+            color: $white;
+            font-size: 1rem;
+            display: none;
         }
     }
     .container-products{
@@ -158,9 +171,6 @@ main{
                         @include paragraph;
                         min-height: 5rem;
                     }
-                    .button-add{
-                        @include button
-                    }
                 }
             }
         }
@@ -187,9 +197,6 @@ main{
                     color: $Boulder;
                     font-weight: 400;
                 }
-                .button-add{
-                    @include button
-                }
             }
         }
     }
@@ -207,82 +214,10 @@ main{
     background-color: $Silver;
 }
 
-.modalItem{
-    .modal{
-        width: 100%;
-        .modal-dialog{
-            max-width: 75%;
-            .modal-content{
-                padding: 2rem 3rem;
-                .button-close{
-                    @include button-close;
-                    width: 5%;
-                }
-                .modal-body{
-                    .product-info{
-                        display: flex;
-                        img{
-                            width: 50%;
-                            object-fit: cover
-                        }
-                        .info{
-                            display: flex;
-                            flex-direction: column;
-                            justify-content: center;
-                            .name-product{
-                                @include title-product;
-                                font-size: 1.75rem;
-                                min-height: auto;
-                            }
-                            .paragraph{
-                                @include paragraph;
-                            }
-                            .description{
-                                @include paragraph;
-                                font-size: 1rem;
-                                min-height: 5rem;
-                            }
-                            .select-text{
-                                font-size: 1rem;
-                                font-weight: 700;
-                            }
-                            select{
-                                @include select;
-                                padding-left: .75rem;
-                            }
-                            .add-details-product{
-                                display: flex;
-                                justify-content: space-between;
-                                align-items: center;
-                                .increase-amount{
-                                    width: 45%;
-                                    height: 100%;
-                                    display: flex;
-                                    justify-content: space-between;
-                                    align-items: center;
-                                    padding: .5rem;
-                                    box-shadow: 0px 11px 29px rgba(0, 0, 0, 0.05);
-                                    border-radius: .5rem;
-                                    img{
-                                        width: 10%;
-                                    }
-                                    p{
-                                        margin: 0;
-                                    }
-                                    .button-increase, .button-decrease{
-                                        border: none;
-                                        background-color: transparent;
-                                        cursor: pointer;
-                                    }
-                                }
-                                .button-add{
-                                    width: 45%;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
+.button-close{
+    @include button-close
+}
+
+.button-add{
+    @include button
 }
